# azure-workshop-oai-qa

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_WITH_AUTH.md  app.py  azure.yaml  docker-compose.yml  pyproject.toml  requirements.txt  runbook.ipynb
data/transformers_docs_full/: index.md
infra/: main.bicep  role.json
infra/core/host/: appservice.bicep
infra/core/search/: search-services.bicep
scripts/: create_env.sh  deploy_infrastructure.sh  indexing.py
tests/: test_chain.py
workshop_oai_qa/: chain.py  resources.py  utils.py
workshop_oai_qa/prompts/: query_generation.py  retrieval_qa.py
